Worked on kathleen comments first half